--- a/contact-me.html
+++ b/contact-me.html
@@ -8,9 +8,8 @@
 
 <body>
   <h1>My Contact Details</h1>
-  <p>My Fiction Address</p>
-  <p>3124782414</p>
-  <p>truongtrinh9x@gmail.con</p>
+  <p>Tel: (312)478-2414</p>
+  <p>Email: truongtrinh9x@gmail.con</p>
 
   <form action="mailto:truongtrinh9x@gmail.com" method="post" enctype="text/plain">
     <label>Your Name:</label>
