--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Minh Truong Trinh</h1>
         <p><em><strong>Software Tester</strong></em></p>
         <p><em><strong>Apt.211 5000 Kenmore Ave Chicago IL 60640</strong></em></p>
-        <p><em><strong>(312) 478-2414</strong></em></p>
+        <p><em><strong><a href="contact-me.html">Tel: (312) 478-2414</a></strong></em></p>
         <p><em><strong>truongtrinh9x@gmail.com</strong></em></p>
       </td>
     </tr>
