--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
 <head>
   <meta charset="utf-8">
   <title>Minh Truong Trinh's Personal Site</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <table cellspacing=20>
     <tr>
       <td>
-        <img src="https://scontent-ort2-2.xx.fbcdn.net/v/t1.0-9/68750710_2496172730404832_4849786378113777664_n.jpg?_nc_cat=101&_nc_oc=AQnljLpk7dKwwwNF-pX-gXLXRdtqr2PN6GkMmfu8gKZo3lfnrrkppXYOFpzpDvraFlvrQFNCufs_AW-4EhdsCmtU&_nc_ht=scontent-ort2-2.xx&oh=52d3f2fe9cbd608e1ee0cc609ed13fa3&oe=5DDF84B8" alt="Minh Truong Trinh Profile Picture">
+        <img src="images/profilePicture.png" alt="Minh Truong Trinh Profile Picture">
       </td>
       <td>
         <h1>Minh Truong Trinh</h1>
         <p><em><strong>Software Tester</strong></em></p>
-        <p><em><strong>Apt.211 5000 Kenmore Ave Chicago IL 60640</strong></em></p>
+        <p><em><strong> 5000 Kenmore Ave Chicago IL 60640</strong></em></p>
         <p><em><strong><a href="contact-me.html">Tel: (312) 478-2414</a></strong></em></p>
         <p><em><strong>truongtrinh9x@gmail.com</strong></em></p>
       </td>
@@ -37,6 +38,7 @@
       <td>Male</td>
     </tr>
   </table>
+  <hr>
   <h3>Education</h3>
   <table cellspacing=20>
     <tr>
@@ -52,6 +54,7 @@
       <td>International University (Vietnam)</td>
     </tr>
   </table>
+  <hr>
   <h3>Work Experience</h3>
   <table cellspacing=20>
     <tr>
@@ -111,6 +114,7 @@
       <td>Software company</td>
     </tr>
   </table>
+  <hr>
   <h3>Skills and Competences</h3>
   <table cellspacing=20>
     <tr>
